Fix header / button alignment

--- a/src/app/components/env-list/env-list.component.css
+++ b/src/app/components/env-list/env-list.component.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-flow: row;
   gap: 4px;
+  align-items: start;
 }
 
 .table-container {
